Personal project addition

--- a/cv/index.html
+++ b/cv/index.html
@@ -302,6 +302,25 @@
                             </li>
                         </ul>
                     </div>
+                    <div>
+                        <h3>Plant It</h3>
+                        <p>
+                            Ecommerce store built and managed using Shopify. Went beyond template boundaries to create a unique and visually 
+                            striking digital environment that aligns seamlessly with brand identity and captivates user attention.
+                        </p>
+                        <ul class="tag-list">
+                            <li>
+                                <div>
+                                    Shopify
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    Liquid
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </section>
             </main>
         </div>
