--- a/cv/index.html
+++ b/cv/index.html
@@ -80,7 +80,7 @@
                                 Responsible for technical and supporting documentation for new and improved features, as well as in-team demoing.
                             </li>
                             <li>
-                                Teach and support new developers during the onboarding process
+                                Teach and support new developers during the onboarding process.
                             </li>
                             <li>
                                 Managed and optimized databases for performance and scalability.
