Job Title fixes

--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tom Nikoloff</title>
-    <meta name="description" content="Thomas Nikoloff is design minded web developer who is focused on building beautiful interfaces and experiences.">
+    <meta name="description" content="Thomas Nikoloff is design minded full stack developer who is focused on building beautiful interfaces and experiences.">
 
     <!-- Favicon -->
     <link rel="icon" href="../images/favicon.png" type="image/x-icon" />
@@ -36,7 +36,7 @@
             <header>
                 <div>
                     <h1>Tom Nikoloff</h1>
-                    <h5>Web Developer</h5>
+                    <h5>Full Stack Developer</h5>
                 </div>
                 <ul class="contact-info">
                     <li>Norwich, United Kingdom</li>
@@ -61,7 +61,7 @@
                     <div>
                         <h3>Powered By Haiku</h3>
                         <div class="uk-flex uk-flex-between uk-flex-bottom">
-                            <h4>Web Developer</h4>
+                            <h4>Full Stack Developer</h4>
                             <h5>Sept 2023 - Present</h5>
                         </div>
                         <ul>
