--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tom Nikoloff</title>
-    <meta name="description" content="Thomas Nikoloff is design minded web developer who is focused on building beautiful interfaces and experiences.">
+    <meta name="description" content="Thomas Nikoloff is design minded full stack developer who is focused on building beautiful interfaces and experiences.">
 
     <!-- Favicon -->
     <link rel="icon" href="./images/favicon.png" type="image/x-icon" />
@@ -108,7 +108,7 @@
                             </span>
                         </div>
                         <p class="intro-text">
-                            A design-minded <span class="secondary-text">Web Developer</span> focused on
+                            A design-minded <span class="secondary-text">Full Stack Developer</span> focused on
                             <br class="uk-visible@s"> 
                             building beautiful interfaces & experiences. 
                         </p>
@@ -192,7 +192,7 @@
                                         PC gaming. During the lockdown, I ventured into learning web development, dedicating my free time to honing my 
                                         skills. This pursuit cemented my ambition – I was determined to pursue a career in this field. In early 2022, 
                                         I took the leap, setting my sights on becoming a full-time developer. By May of that year, I secured my first 
-                                        role as a Web developer, marking a pivotal moment that has propelled me forward ever since.
+                                        role as a junior web developer, marking a pivotal moment that has propelled me forward ever since.
                                     </p>
                                     <p>
                                         I embody reliability, conscientiousness, and a strong work ethic, 
@@ -292,7 +292,7 @@
                                 </div>
                                 <div  data-aos="fade-right">
                                     <p>
-                                        Throughout my journey as a Web Developer, I've undergone significant expansion of my knowledge base, 
+                                        Throughout my journey as a Developer, I've undergone significant expansion of my knowledge base, 
                                         enhancing both my proficiency in various programming languages and the array of tools I employ.
                                     </p>
                                     <p class="uk-margin-remove">
@@ -409,7 +409,7 @@
                                             <div uk-grid class="uk-grid uk-child-width-1-2@s uk-margin-remove uk-grid-row-collapse">
                                                 <div>
                                                     <p class="uk-margin-remove">
-                                                        Web Developer
+                                                        Full Stack Developer
                                                     </p>
                                                 </div>
                                                 <div>
