--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tom Nikoloff</title>
-    <meta name="description" content="Thomas Nikoloff is design minded full stack developer who is focused on building beautiful interfaces and experiences.">
+    <meta name="description" content="Thomas Nikoloff is design minded Software Developer who is focused on building beautiful interfaces and experiences.">
 
     <!-- Favicon -->
     <link rel="icon" href="./images/favicon.png" type="image/x-icon" />
@@ -108,7 +108,7 @@
                             </span>
                         </div>
                         <p class="intro-text">
-                            A design-minded <span class="secondary-text">Full Stack Developer</span> focused on
+                            A design-minded <span class="secondary-text">Software Developer</span> focused on
                             <br class="uk-visible@s"> 
                             building beautiful interfaces & experiences. 
                         </p>
@@ -409,7 +409,7 @@
                                             <div uk-grid class="uk-grid uk-child-width-1-2@s uk-margin-remove uk-grid-row-collapse">
                                                 <div>
                                                     <p class="uk-margin-remove">
-                                                        Full Stack Developer
+                                                        Software Developer
                                                     </p>
                                                 </div>
                                                 <div>
