Skills area & other tweaks

--- a/index.html
+++ b/index.html
@@ -188,18 +188,20 @@
                                 </div>
                                 <div data-aos="fade-right">
                                     <p>
-                                        My fascination with technology and computers traces back to my early days, sparked by a deep-rooted love for 
+                                        My fascination with technology and computers traces back to my early days, sparked by a love for 
                                         PC gaming. During the lockdown, I ventured into learning web development, dedicating my free time to honing my 
                                         skills. This pursuit cemented my ambition – I was determined to pursue a career in this field. In early 2022, 
                                         I took the leap, setting my sights on becoming a full-time developer. By May of that year, I secured my first 
-                                        role as a junior web developer, marking a pivotal moment that has propelled me forward ever since.
+                                        role as a junior developer, marking a pivotal moment that has propelled me forward ever since.
                                     </p>
+                                    <!--
                                     <p>
                                         I embody reliability, conscientiousness, and a strong work ethic, 
                                         thriving both in collaborative team environments and when driving projects independently.
                                         My approach involves infusing enthusiasm and unwavering commitment into every task at hand. 
                                         I'm drawn to challenges, proactively tackling them head-on, fueled by the drive to unearth effective solutions.
                                     </p>
+                                    -->
                                     <p class="uk-margin-remove">
                                         When I'm not at my computer, I'm am usually in the gym, hanging out with family or going for long walks with my golden retriever, Lola.
                                     </p>
@@ -291,13 +293,16 @@
                                     </span>
                                 </div>
                                 <div  data-aos="fade-right">
+                                    <!--
                                     <p>
                                         Throughout my journey as a Developer, I've undergone significant expansion of my knowledge base, 
                                         enhancing both my proficiency in various programming languages and the array of tools I employ.
                                     </p>
+                                    -->
                                     <p class="uk-margin-remove">
-                                        My skill set is diverse, spanning from foundational languages like HTML, CSS, and JavaScript to more 
-                                        intricate systems such as PHP, SQLite, and Firebase. While my primary expertise lies in front-end development,
+                                        I possess a well-rounded skill set, encompassing front-end technologies like HTML, CSS, and JavaScript, 
+                                        as well as proficiency in back-end systems such as PHP, SQLite, and Firebase. 
+                                         While my primary expertise lies in front-end development,
                                          my true passion lies in crafting flawlessly detailed websites and apps, prioritizing intuitiveness, 
                                          semantic structure, and responsiveness.
                                     </p>
@@ -316,9 +321,9 @@
                         </div>
                         <div class="uk-flex uk-flex-middle">
                             <div class="uk-width-1-1">
-                                <div class="skills-section">
+                                <div class="skills-section" data-aos="zoom-out-left">
+                                    <!--
                                     <div id="skill_animation_trigger">
-    
                                         <div class="uk-margin">
                                             HTML5
                                             <div class="skills-bar">
@@ -328,59 +333,57 @@
                                         <div class="uk-margin">
                                             JavaScript
                                             <div class="skills-bar">
-                                                <div id="js_skill" class="skill-level" data-skill-level="92%"></div>
+                                                <div id="js_skill" class="skill-level" data-skill-level="95%"></div>
                                             </div>
                                         </div>
                                         <div class="uk-margin">
                                             PHP
                                             <div class="skills-bar">
-                                                <div class="skill-level" data-skill-level="75%"></div>
+                                                <div class="skill-level" data-skill-level="85%"></div>
                                             </div>
                                         </div>
                                         <div class="uk-margin">
                                             React
                                             <div class="skills-bar">
-                                                <div class="skill-level" data-skill-level="60%"></div>
+                                                <div class="skill-level" data-skill-level="75%"></div>
                                             </div>
                                         </div>
                                         <div class="uk-margin">
                                             CSS3
                                             <div class="skills-bar">
-                                                <div class="skill-level" data-skill-level="92%"></div>
+                                                <div class="skill-level" data-skill-level="95%"></div>
                                             </div>
                                         </div>
-    
-                                        <!--
-                                        <div class="uk-flex uk-flex-center" style="margin-top: 50px; margin-left: 120px;">
-                                            <div class="uk-position-relative">
-                                                <div class="ring">&lt;HTML5/&gt;
-                                                    <span></span>
-                                                </div>
-                                            </div>
-                                            <div class="uk-position-relative">
-                                                <div class="ring">JS();
-                                                    <span></span>
-                                                </div>
+                                    </div>
+                                    -->
+                                    <div class="uk-flex uk-flex-center">
+                                        <div class="skill-ring-container">
+                                            <div class="ring">&lt;HTML5/&gt;
+                                                <span></span>
                                             </div>
                                         </div>
-                                        <div class="uk-flex uk-flex-center" style="margin-bottom: -50px; margin-left: 120px;">
-                                            <div class="uk-position-relative">
-                                                <div class="ring">&lt;?PHP ?&gt;
-                                                    <span></span>
-                                                </div>
-                                            </div>
-                                            <div class="uk-position-relative">
-                                                <div class="ring">React();
-                                                    <span></span>
-                                                </div>
-                                            </div>
-                                            <div class="uk-position-relative">
-                                                <div class="ring">.CSS3{}
-                                                    <span></span>
-                                                </div>
+                                        <div class="skill-ring-container">
+                                            <div class="ring">JS();
+                                                <span></span>
                                             </div>
                                         </div>
-                                        -->
+                                    </div>
+                                    <div class="uk-flex uk-flex-center">
+                                        <div class="skill-ring-container">
+                                            <div class="ring">&lt;?PHP ?&gt;
+                                                <span></span>
+                                            </div>
+                                        </div>
+                                        <div class="skill-ring-container">
+                                            <div class="ring">React();
+                                                <span></span>
+                                            </div>
+                                        </div>
+                                        <div class="skill-ring-container">
+                                            <div class="ring">.CSS3{}
+                                                <span></span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="experience-section">
