Adding CRM Project. Other Fixes

--- a/index.html
+++ b/index.html
@@ -487,9 +487,55 @@
                     </div>
         
                     <div classs="projects-area">
-                
-                        <!-- First Project-->
+                        <div></div>
+
+                        <!-- New Project -->               
                         <div uk-grid class="uk-grid uk-child-width-1-2@l uk-grid-column-collapse project-container">
+                            <div class="uk-flex uk-flex-middle uk-flex-first@l uk-flex-last">
+                                <div class="project-content" data-aos="zoom-out-right">
+                                    <p class="project-type">
+                                        Work In Progress
+                                    </p>
+                                    <h3 class="project-title">Caseflow CRM</h3>
+                                    <div class="project-description">
+                                        <p>
+                                            A completely custom mortgage and protection CRM platform built from the ground up with the aim to be more complete than any other currently on the market.
+                                            The CRM is structured with a modular design, allowing for easy integration and customization of specific functionalities. 
+                                            Enhancing productivity through the implementation of iframes, enabling concurrent management of multiple leads, cases, and other tasks seamlessly. 
+                                            This ensures that users can work on various items simultaneously without the risk of losing any progress.
+                                        </p>
+                                    </div>
+                                    <ul class="project-tech-stack">
+                                        <li>JavaScript</li>
+                                        <li>PHP</li>
+                                        <li>SQLite</li>
+                                        <li>UiKit</li>
+                                        <li>getAddress()</li>
+                                        <li>PropertyData API</li>
+                                        <li>Google Street View API</li>
+                                    </ul>
+                                    <div class="project-links">
+                                        <a class="icon-link" uk-tooltip="title: External Link; pos: bottom; delay: 700" href="https://tom-nikoloff-react-weather.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
+                                        <a class="icon-link" uk-tooltip="title: GitHub; pos: right; delay: 700" href="https://github.com/TomNikoloff/react-weather-app" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="uk-position-relative">
+                                <a  href="https://tom-nikoloff-react-weather.netlify.app/" target="_blank" rel="noopener noreferrer">
+                                    <div class="project-image-container" data-aos="fade-left">
+                                        <div class="overlay"></div>
+                                        <div class="project-image">
+                                            <img style="border: 2px solid rgba(13, 28, 54, 0.7);" src="./images/crm-2.png">
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+                        <hr class="uk-divider-icon uk-hidden@l">
+
+                        <!-- First Project-->
+                        <div uk-grid class="uk-grid uk-child-width-1-2@l uk-grid-column-collapse project-container uk-margin-xlarge-top">
                             <div class="uk-position-relative">
                                 <a>
                                     <div class="project-image-container" data-aos="fade-right">
@@ -542,9 +588,10 @@
                                         </p>
                                     </div>
                                     <ul class="project-tech-stack">
+                                        <li>JavaScript</li>
                                         <li>GoJs</li>
                                         <li>UiKit</li>
-                                        <li>SQLite</li>
+                                        <li>PHP</li>
                                         <li>Twig</li>
                                         <li>Firebase</li>
                                     </ul>
@@ -732,7 +779,7 @@
                                     <ul class="project-tech-stack">
                                         <li>HTML</li>
                                         <li>CSS</li>
-                                        <li>JS</li>
+                                        <li>JavaScript</li>
                                         <li>UiKit</li>
                                     </ul>
                                     <div class="project-links">
@@ -830,7 +877,7 @@
                                             Vite
                                         </li>
                                         <li>
-                                            UIKit
+                                            UiKit
                                         </li>
                                     </ul>
                                 </footer>
@@ -911,7 +958,7 @@
                                             Vite
                                         </li>
                                         <li>
-                                            UIKit
+                                            UiKit
                                         </li>
                                     </ul>
                                 </footer>
