CRM Fix. Dark mode / Light Mode toggle setup

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/2eaf1545d9.js" crossorigin="anonymous"></script>
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.16.23/dist/css/uikit.min.css" />
 
@@ -63,6 +66,17 @@
             <div id="scroll_section_A">
             </div>
            <section id="intro_section" class="intro-section full-height-section uk-position-relative">
+                <!--
+                <div class="toggle-swicther-container">
+                    <label>
+                        <input type="checkbox" id="toggle_swicther">
+                        <span>
+                            <i class="bi bi-moon"></i>
+                            <i class="bi bi-brightness-high"></i>
+                        </span>
+                    </label>
+                </div>
+                -->
         
                 <div class="uk-position-absolute" style="top: 100px;">
                     <div>
@@ -510,25 +524,27 @@
                                         <li>PHP</li>
                                         <li>SQLite</li>
                                         <li>UiKit</li>
-                                        <li>getAddress()</li>
+                                        <li>getAddress( );</li>
                                         <li>PropertyData API</li>
                                         <li>Google Street View API</li>
                                     </ul>
+                                    <!--
                                     <div class="project-links">
-                                        <a class="icon-link" uk-tooltip="title: External Link; pos: bottom; delay: 700" href="https://tom-nikoloff-react-weather.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
-                                        <a class="icon-link" uk-tooltip="title: GitHub; pos: right; delay: 700" href="https://github.com/TomNikoloff/react-weather-app" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
+                                        <a class="icon-link" uk-tooltip="title: External Link; pos: bottom; delay: 700" href="" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
+                                        <a class="icon-link" uk-tooltip="title: GitHub; pos: right; delay: 700" href="" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
                                     </div>
+                                    -->
                                 </div>
                             </div>
                             <div class="uk-position-relative">
-                                <a  href="https://tom-nikoloff-react-weather.netlify.app/" target="_blank" rel="noopener noreferrer">
+                                <!--<a  href=" target="_blank" rel="noopener noreferrer">-->
                                     <div class="project-image-container" data-aos="fade-left">
                                         <div class="overlay"></div>
                                         <div class="project-image">
                                             <img style="border: 2px solid rgba(13, 28, 54, 0.7);" src="./images/crm-2.png">
                                         </div>
                                     </div>
-                                </a>
+                                <!--</a>-->
                             </div>
                         </div>
 
