CV profile update

--- a/cv/index.html
+++ b/cv/index.html
@@ -48,7 +48,7 @@
                 <section>
                     <h2>Profile</h2>
                     <p>
-                        Experienced Developer with 1.5+ years of expertise in crafting dynamic websites and applications.
+                        Experienced Developer with nearly 2 years of expertise in crafting dynamic websites and applications.
                         Proficient in multiple programming languages, frameworks, and design principles. 
                         Skilled in front-end and back-end development, emphasizing responsive design and scalability.
                         Fast learner with excellent problem-solving abilities - always willing to take on any opportunity 
