React Weather App - Update
Details updated to include TypeScript.

--- a/cv/index.html
+++ b/cv/index.html
@@ -247,6 +247,42 @@
                 <section>
                     <h2>Personal Projects</h2>
                     <div>
+                        <h3>Weather App</h3>
+                        <p>
+                            Built a React weather app for easy access to current, 3-hourly, and 5-day forecasts worldwide.
+                            Simply input a location (city or current), toggle between Celsius and Fahrenheit, and get detailed
+                            weather info like temperature, humidity, wind speed, and conditions.
+                        </p>
+                        <ul class="tag-list">
+                            <li>
+                                <div>
+                                    React
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    TypeScript
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    Netlify
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    UiKit
+                                </div>
+                            </li>
+
+                            <li>
+                                <div>
+                                    Styled Components
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
                         <h3>Financial Calculators</h3>
                         <p>
                             Couldn't find a website with dynamic financial calculators, so I made my own. 
@@ -272,37 +308,6 @@
                         </ul>
                     </div>
                     <div>
-                        <h3>Weather App</h3>
-                        <p>
-                            Built a React weather app for easy access to current, 3-hourly, and 5-day forecasts worldwide.
-                            Simply input a location (city or current), toggle between Celsius and Fahrenheit, and get detailed
-                            weather info like temperature, humidity, wind speed, and conditions.
-                        </p>
-                        <ul class="tag-list">
-                            <li>
-                                <div>
-                                    React
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    Netlify
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    UiKit
-                                </div>
-                            </li>
-
-                            <li>
-                                <div>
-                                    Styled Components
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div>
                         <h3>Plant It</h3>
                         <p>
                             Ecommerce store built and managed using Shopify. Went beyond template boundaries to create a unique and visually 
@@ -317,6 +322,11 @@
                             <li>
                                 <div>
                                     Liquid
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    JS
                                 </div>
                             </li>
                         </ul>
