--- a/index.html
+++ b/index.html
@@ -715,6 +715,7 @@
                                     </div>
                                     <ul class="project-tech-stack">
                                         <li>React</li>
+                                        <li>TypeScript</li>
                                         <li>Open Weather API</li>
                                         <li>Netlify</li>
                                         <li>Styled Components</li>
@@ -722,7 +723,7 @@
                                     </ul>
                                     <div class="project-links">
                                         <a class="icon-link" uk-tooltip="title: External Link; pos: bottom; delay: 700" href="https://tom-nikoloff-react-weather.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square fa-lg"></i></a>
-                                        <a class="icon-link" uk-tooltip="title: GitHub; pos: right; delay: 700" href="https://github.com/TomNikoloff/react-weather-app" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
+                                        <a class="icon-link" uk-tooltip="title: GitHub; pos: right; delay: 700" href="https://github.com/TomNikoloff/react-weather-app_ts" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github fa-xl"></i></a>
                                     </div>
                                 </div>
                             </div>
