Skills Area Update

--- a/index.html
+++ b/index.html
@@ -314,16 +314,16 @@
                                     </p>
                                     -->
                                     <p class="uk-margin-remove">
-                                        I possess a well-rounded skill set, encompassing front-end technologies like HTML, CSS, and JavaScript, 
+                                        I possess a well-rounded skill set, encompassing front-end technologies like HTML, CSS, JavaScript and ReactJS, 
                                         as well as proficiency in back-end systems such as PHP, SQLite, and Firebase. 
-                                         While my primary expertise lies in front-end development,
-                                         my true passion lies in crafting flawlessly detailed websites and apps, prioritizing intuitiveness, 
-                                         semantic structure, and responsiveness.
+                                        While my primary expertise lies in front-end development,
+                                        my true passion lies in crafting flawlessly detailed websites and apps, prioritizing intuitiveness, 
+                                        semantic structure, and responsiveness.
                                     </p>
                                     <p>
-                                        Moreover, I've recently directed my efforts towards mastering React. Through a combination of self-study 
-                                        and completion of multiple online courses, I've delved deep into this library. This endeavor has been 
-                                        complemented by hands-on project engagements, solidifying my understanding and application of React's capabilities.
+                                        Furthermore, I am committed to lifelong learning and personal growth. I actively seek opportunities to broaden my 
+                                        expertise and enhance my skills. Through self-directed study and by engaging in hands-on projects, 
+                                        I continually delve into new subjects, striving to deepen my understanding and proficiency.
                                     </p>
                                 </div>
                                 <div style="margin-top: -10px;">
