CV Experience Fix

--- a/cv/index.html
+++ b/cv/index.html
@@ -94,6 +94,11 @@
                             </li>
                             <li>
                                 <div>
+                                    React
+                                </div>
+                            </li>
+                            <li>
+                                <div>
                                     PHP
                                 </div>
                             </li>
@@ -110,11 +115,6 @@
                             <li>
                                 <div>
                                     Bootstrap
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    Shopify
                                 </div>
                             </li>
                             <li>
